--- a/template.env
+++ b/template.env
@@ -23,4 +23,4 @@ STOP_LIMIT_PERCENTAGE=false
 PROFIT_LOCK_PERCENTAGE=1.7
 
 #if true, gains will get compounded into the following trade
-COMPOUND=true
+COMPOUND=false
