--- a/package.json
+++ b/package.json
@@ -1,22 +1,32 @@
 {
-  "name": "wolf",
-  "version": "3.6.1",
+  "name": "binance-traderBot",
+  "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "trader.js",
   "scripts": {
-    "test": "mocha --recursive --exit",
-    "start": "node .",
-    "simulator": "mocha simulator.js --exit"
+    "start": "node ./trader",
+    "test": "cross-env NODE_ENV=test ./node_modules/.bin/mocha",
+    "cover": "cross-env NODE_ENV=test istanbul cover ./node_modules/.bin/_mocha"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ignaciop000/binance-traderBot"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "binance-api-node": "^0.5.0",
-    "dotenv": "^4.0.0",
-    "node-binance-api": "^0.3.6",
-    "ora": "^2.1.0"
+    "axios": "^0.18.0",
+    "body-parser": "^1.18.2",
+    "ejs": "^2.6.1",
+    "express": "^4.16.3",
+    "socket.io": "^2.1.0",
+    "sprintf-js": "^1.1.1"
   },
   "devDependencies": {
-    "mocha": "^4.1.0"
+    "axios-mock-adapter": "^1.15.0",
+    "chai": "^4.1.2",
+    "cross-env": "^5.1.5",
+    "mocha": "^4.0.1",
+    "socket.io-mock": "^1.2.3"
   }
 }
